--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title>My Portfolio</title>
+        <title>Sibisrinivas</title>
     </head>
     <body>
         <h1>Sibisrinivas's Portfolio</h1>
